--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
       <version>1.1.2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.konghq/unirest-objectmapper-jackson -->
+    <dependency>
+      <groupId>com.konghq</groupId>
+      <artifactId>unirest-objectmapper-jackson</artifactId>
+      <version>3.3.00</version>
+    </dependency>
+
   </dependencies>
 
   <build>
